<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="num1">Num 1</string>
    <string name="num2">Num 2</string>
    <string name="hint1">Enter Num 1</string>
    <string name="hint2">Enter Num 2</string>
    <string name="results">RESULTS</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="remainder">%</string>
    <string name="exponent">^</string>
    <string name="clear">CLEAR</string>
</resources>